fix annoying scrollbar appear on link click error 2

--- a/css/main.css
+++ b/css/main.css
@@ -107,6 +107,10 @@ a:hover {
 
 /* Smartphones */
 @media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
+  body {
+    min-height: 100vh;
+  }
+
   /* Navbar */
   #navbar {
     margin-bottom: 0;
